refreshed data on status change, updated requirements, updated UI, fixed spacing error

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  gap: 0;
 }
 
 .leftSide{
@@ -19,7 +20,7 @@
 .rightSide{
   display: flex;
   width: 85%;
-  height: 90%;
+  height: 100%;
   margin: auto;
 }
 
